--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ readme="README.md"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+generational-arena = "0.2"
